--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
-theme: jekyll-theme-hacker
+theme: hacker
 title: Ross Douglas.
 description: This is a site I'm learning to build with github. I'm kind of throwing myself in at the deep end here and may get frustrated and give up. Who knows?
